--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ auto: true
 rdiscount:
   extensions: [smart]
 
-name: Zach Holman
-url: http://zachholman.com
-description: A fantastic blog that is fantastic.
-twitter: holman
-github: holman
-gravatar_url: http://gravatar.com/avatar/6f63cde8b16b035280ca615f621a6c8c
+name: lanstonpeng
+url: lanstonpeng.blogcn.com
+description: Testing
+twitter: lanstonpeng
+github: lanstonpeng
+gravatar_url: http://www.gravatar.com/avatar/5a36e8505a29cd56826ccc56bcc1dd2d
