--- a/lab/Poem/Poem/Poem-Info.plist
+++ b/lab/Poem/Poem/Poem-Info.plist
@@ -26,7 +26,7 @@
 	<true/>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Poiretone.woff</string>
+		<string>方正清刻本悦宋简体.ttf</string>
 	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
