--- a/lab/ParallelScroll/ParallelScroll/ParallelScroll-Info.plist
+++ b/lab/ParallelScroll/ParallelScroll/ParallelScroll-Info.plist
@@ -24,13 +24,8 @@
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>UIAppFonts</key>
-	<array>
-		<string>icomoon.ttf</string>
-		<string>CygnetRound.ttf</string>
-		<string>QuicksandLight.ttf</string>
-		<string>方正清刻本悦宋简体.ttf</string>
-	</array>
+	<key>UIMainStoryboardFile</key>
+	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
@@ -38,8 +33,8 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
 </dict>
 </plist>
