--- a/lab/Poem/Poem/Poem-Info.plist
+++ b/lab/Poem/Poem/Poem-Info.plist
@@ -42,5 +42,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIStatusBarHidden</key>
+	<true/>
 </dict>
 </plist>
