--- a/lab/Focord2/Focord2/Record.plist
+++ b/lab/Focord2/Focord2/Record.plist
@@ -3,6 +3,8 @@
 <plist version="1.0">
 <array>
 	<dict>
+		<key>startTime</key>
+		<date>2014-08-11T22:31:30Z</date>
 		<key>recordType</key>
 		<integer>0</integer>
 		<key>duration</key>
