--- a/lab/Focord2/Focord2/Record.plist
+++ b/lab/Focord2/Focord2/Record.plist
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<array>
+<dict>
+	<key>New item</key>
 	<dict>
 		<key>startTime</key>
 		<date>2014-08-11T22:31:30Z</date>
@@ -10,5 +11,5 @@
 		<key>duration</key>
 		<integer>0</integer>
 	</dict>
-</array>
+</dict>
 </plist>
